# JackPotts

./: .gitignore  LICENSE  README.md  STATS.md  bot.py  decision_engine.py  hand_evaluator.py  joker_effects.py  pyproject.toml  real_mismatches_077.txt  run4.bat  stats.py  strategy.py  supervisor.py  test_acrobat.py  test_baseball.py  test_baseball_order.py  test_blackboard.py  test_blackhole.py  test_cavendish.py  test_dashboard.py  test_flint_vampire.py  test_glass_poly.py  test_hand_evaluator.py  test_holo_edition.py  test_hologram.py  test_mismatch_lift.py  test_mult_holo.py  test_percard_scoring.py  test_rearrange.py  test_scoring_053.py  test_scoring_bugs.py  test_smaller_issues.py  test_steel_joker.py  test_win.py
.github/workflows/: test.yml
docs/: architecture.md  dashboard.md  installation.md  logic-separation-plan-detailed.md  project-assessment.md  refactor_plan.md  release-notes.md  scoring.md  testing.md  usage.md
scripts/: extract_jokers.py
src/balatro_bot/: __init__.py  actions.py  bot.py  bot_format.py  bot_logging.py  cards.py  cli.py  config.py  constants.py  context.py  dashboard_client.py  engine.py  hand_evaluator.py  joker_registry.py  joker_valuation.py  scaling.py  strategy.py  supervisor.py  value_map.py
stats/: __main__.py  constants.py  finder.py  merge.py  parser.py  replay.py  report.py  scoring.py
tests/: conftest.py  test_batch069_fixes.py  test_blind_name_threading.py  test_boss_adjustment.py  test_card_model.py  test_characterization.py  test_chase.py  test_consumable_pack_policy.py  test_deck_profile.py  test_discard_ev.py  test_hand_evaluator.py  test_held_card_jokers.py  test_joker_aware_chase.py  test_joker_valuation.py  test_live_stats.py  test_money_opportunity_cost.py  test_mouth_commit.py  test_negative_slot_awareness.py  test_play_discard_policy.py  test_play_order.py  test_playing_policy.py  test_scoring_accuracy.py  test_shop_policy.py  test_shop_swap.py  test_state_adapter.py
tests/integration/: bucket_defs.py  conftest.py  dump_ox_state.py  harness.py  (+35 more)
(+47 files in other folders)
