[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "balatro-bot"
version = "0.2.0-beta"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "balatrobot",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
balatro-bot = "balatro_bot.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
# Integration tests require a running balatrobot server; run them explicitly:
#   python tests/integration/test_acrobat.py --port 12346
addopts = "--ignore=tests/integration"
markers = [
    "integration: requires a running balatrobot server",
]

[tool.setuptools.packages.find]
where = ["src"]
